argocd/apps/dollardollar/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dollardollar
  name: dollardollar
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: dollardollar
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: dollardollar
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: dollardollar-secrets
          image: harung43/dollardollar:latest@sha256:a707dd81019aec451ed79b445e241e0158bfc00ea4cf8c0fb96b420f4dc60bed
          imagePullPolicy: IfNotPresent
          #command: ["sleep", "inf"]
          name: dollardollar
          # resources:
          #   limits:
          #     cpu: 500m
          #     memory: 500Mi
          #   requests:
          #     cpu: 25m
          #     memory: 50Mi
          ports:
            - containerPort: 5001
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 5001
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 5001
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
