argocd/apps/dollardollar/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: dollardollar-app
  name: dollardollar-http-route
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - dollar.yanello.net
  rules:
  - backendRefs:
    - name: dollardollar
      namespace: ihatemoney
      port: 5001
